--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ input#id{
             <li><a href="world-clock.html">World Clock</a></li>
           </ul>
         </li>
-        <li><a href="http://diplomaticcourierservices.ml/freight/">Tracking</a></li>
+        <li><a href="http://dcservices.ml/freight/">Tracking</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="contant.html">Contact Us</a></li>
       </ul>
@@ -82,7 +82,7 @@ input#id{
   <div class="container_24">
     <div class="wrapper">
       <div class="grid_17">
-        <h1><a href="index.html">Idealex</a></h1>
+        <h1><a href="http://www.dcservices.ml">Idealex</a></h1>
       </div>
       <div class="grid_7">
       	<div style="padding-top:10px">
@@ -115,7 +115,7 @@ input#id{
 <div id="wowslider-container3">
 <div class="ws_images"><ul>
 		<li><img src="data3/images/slide_1.jpg" alt="WELCOME TO DIPLOMATIC COURIER SERVICES - A SAFE EXPRESS DELIVERY WORLDWIDE - 24/7 DELIVERY SERVICE....." title="WELCOME TO DIPLOMATIC COURIER SERVICES - SAFE EXPRESS DELIVERY WORLDWIDE - 24/7 DELIVERY SERVICE....." id="wows3_0"/></li>
-		<li><a href="http://diplomaticcourierservices.ml"><img src="data3/images/slide6.jpg" alt="jquery slider" title="WE DELIVER YOUR APPLICATIONS, DOCUMENTS TO UNIVERSITIES AND COLLEGES ANYWHERE IN THE WORLD AT AN AMAZINGLY DISCOUNTED PRICE" id="wows3_6"/></a></li>
+		<li><a href="http://dcservices.ml"><img src="data3/images/slide6.jpg" alt="jquery slider" title="WE DELIVER YOUR APPLICATIONS, DOCUMENTS TO UNIVERSITIES AND COLLEGES ANYWHERE IN THE WORLD AT AN AMAZINGLY DISCOUNTED PRICE" id="wows3_6"/></a></li>
 		<li><img src="data3/images/slide5.jpg" alt="WE DELIVER WHAT YOU WANT DIPLOMATIC COURIER SERVICES TO & WE DELIVER WHAT U CARRY!" title="WE DELIVER WHAT YOU WANT DIPLOMATIC COURIER SERVICES TO & WE DELIVER WHAT YOU CARRY!" id="wows3_2"/></li>
 		<li><img src="data3/images/slide4.jpg" alt="WE COLLECT FROM YOU & DELIVER TO THE DESTINATION - DIPLOMATIC COURIER SERVICES CARRY FAST AND SAFE" title="WE COLLECT FROM U & DELIVER TO THE DESTINATION - DIPLOMATIC COURIER SERVICES CARRY FAST AND SAFE" id="wows3_3"/></li>
 		<li><img src="data3/images/slide7.jpg" alt="CARGO BY SEA/AIR/ROAD, MOVERS & PACKERS - FORM SHIPMENTS, AIRPORT TO AIRPORT / AIRPORT TO DOOR, DOOR TO AIRPORT" title="CARGO BY SEA/AIR/ROAD, MOVERS & PACKERS - FORM SHIPMENTS, AIRPORT TO AIRPORT / AIRPORT TO DOOR, DOOR TO AIRPORT" id="wows3_4"/></li>
@@ -174,7 +174,7 @@ input#id{
 <div align="center" style="background-image:url(images/bg-body2.jpg); background-color:#3a90d9;">
   <div align="center" class="style1" style="background:none;">
     <p>&nbsp;</p>    <p>Diplomatic Courier Services (c) 2018 | <span><a href="http://www.multiplestyles.com/">Website Designed &amp; Developed by Bulatek Technology</a></span></p>
-    <p>Follow Us: <img src="images/icon3.png" width="16" height="16"> <span class="style1"><a href="https://www.facebook.com/Diplomatic Courier Servicespk" target="_blank">facebook</a> | <img src="images/icon2.png" width="16" height="16"> <a href="http://www.twitter.com/Diplomatic Courier Servicesintl" target="_blank">twitter </a> | <img src="images/tumblr-icon.png" width="16" height="16"> <a href="http://Diplomatic Courier Servicesintl.tumblr.com/" target="_blank">Tumblr</a></span></p>
+    <p>Follow Us: <img src="images/icon3.png" width="16" height="16"> <span class="style1"><a href="https://www.facebook.com/Diplomatic Courier Servicespk" target="_blank">facebook</a> | <img src="images/icon2.png" width="16" height="16"> <a href="http://www.twitter.com/Diplomatic Courier Servicesintl" target="_blank">twitter </a> | <img src="images/tumblr-icon.png" width="16" height="16"> <a href="http://dcservices.ml/" target="_blank">Tumblr</a></span></p>
   </div>
   <div align="center"> </div>
 </div>
